--- a/eliza/index.html
+++ b/eliza/index.html
@@ -307,7 +307,7 @@
             </section>
             <section class="button-container" v-if="showNextButton()">
                 <button class="button" v-if="currentGameStep === 0" v-on:click="next()">Start Game</button>
-                <button class="button" v-if="currentGameStep === 1 || currentGameStep === 2" v-on:click="next()">Next >></button>
+                <button class="button" :disabled="isAIThinking" v-if="currentGameStep === 1 || currentGameStep === 2" v-on:click="next()">{{ nextButtonText }}</button>
             </section>
             <section class="boardstate" v-if="showBoardState">
                 <a href="#" class="boardstate_close" v-on:click="toggleShowBoardState">[ Close Board State ]</a>
