--- a/eliza/index.html
+++ b/eliza/index.html
@@ -20,7 +20,7 @@
     <main id="eliza">
         <section v-if="!gameHasStarted" class="playerArea">
             <h1 class="starttitle text-centered">
-                Eliza
+                Eliza and Eleanor
             </h1>
             <h2 class="startsubtitle text-centered">
                 Brass: Birmingham Solo Mode
