--- a/eliza/index.html
+++ b/eliza/index.html
@@ -77,7 +77,7 @@
                     If you think the app is making a mistake, use the 'View Board State' link at the top of the app to compare your physical board with the app's.
                 </li>
                 <li class="action-desc">
-                    NOTE: The AIs always behave as if they are connected to the coal market. They do not require beer to sell, but they will consume it if they can. They earn extra VP under certain cirumcstances (the app will tell you). You play by normal rules, except you <em>cannot overbuild (the AIs can't either)</em>.
+                    NOTE: The AIs always behave as if they are connected to the coal market. They do not require beer to sell, but they will consume it if they can. If they cannot sell they attempt a free network action. They also earn extra VP under certain circumstances (the app will tell you). You play by normal rules, except you <em>cannot overbuild (the AIs can't either)</em>.
                 </li>
             </ul>
         </section>
