--- a/eliza/index.html
+++ b/eliza/index.html
@@ -25,6 +25,7 @@
             </h1>
             <h2 class="startsubtitle text-centered">
                 Brass: Birmingham Solo Mode
+                <span class="text-tiny"><br />version {{ appVersion }}</span>
             </h2>
             <p class="startmessage">
                 Select your player color
