--- a/eliza/index.html
+++ b/eliza/index.html
@@ -64,7 +64,7 @@
             <br />
             <button class="button" v-on:click="startGame">Proceed to Setup</button>
             <br /><br />
-            <h3>Notes</h3>
+            <h3>Important Notes</h3>
             <ul style="padding: 0 1rem;">
                 <li class="action-desc">
                     The app will refer to spaces in locations by number, for example "Coalbrookdale (Space 2)". The spaces are numbered from left-to-right, top-to-bottom. See the below reference:
@@ -78,7 +78,16 @@
                     If you think the app is making a mistake, use the 'View Board State' link at the top of the app to compare your physical board with the app's.
                 </li>
                 <li class="action-desc">
-                    NOTE: The AIs always behave as if they are connected to the coal market. They do not require beer to sell, but they will consume it if they can. If they cannot sell they attempt a free network action. They also earn extra VP under certain circumstances (the app will tell you). You play by normal rules, except you <em>cannot overbuild (the AIs can't either)</em>.
+                    GAMEPLAY DIFFERENCES: 
+                    <ul style="padding: 0 1rem;">
+                        <li class="action-desc">The AIs always behave as if they are connected to the coal market.</li>
+                        <li class="action-desc">
+                        The AIs do not require beer to sell, but they will consume it if they can. If they cannot sell they attempt a free network action. They also earn extra VP under certain circumstances (the app will tell you).
+                        </li>
+                        <li class="action-desc">You play by normal rules, except <em>you cannot overbuild (the AIs can't either)</em>.</li>
+                        <li class="action-desc">Removing industry tiles to pay for negative income is not currently supported.</li>
+                    </ul>
+                      
                 </li>
             </ul>
         </section>
@@ -144,7 +153,7 @@
                                 <p class="card__name">Develop</p>
                             </li>
                             <li class="card card--clickable" v-on:click="setHumanAction('40')">
-                                <p class="card__name">Scout or Loan</p>
+                                <p class="card__name">Scout, Loan, Pass</p>
                             </li>
                         </ul>
                     </section>
@@ -285,8 +294,8 @@
 
                     <section v-if="humanPlayer.actionStep === '40'">
                         <a href="#" v-on:click="prevSetHumanAction()">< Go Back</a>
-                        <p class="action-header">You do not need to enter anything into the app for Scout or Loan.</p> 
-                        <p>Click 'Next' when you have finished your Scout or Loan action.</p>
+                        <p class="action-header">You do not need to enter anything into the app for Scout, Loan, or Pass.</p> 
+                        <p>Click 'Next' when you have finished your Scout, Loan, or Pass action.</p>
                     </section>
                 </section>
 
