--- a/eliza/index.html
+++ b/eliza/index.html
@@ -80,7 +80,7 @@
                 <li class="action-desc">
                     GAMEPLAY DIFFERENCES: 
                     <ul style="padding: 0 1rem;">
-                        <li class="action-desc">The AIs always behave as if they are connected to the coal market.</li>
+                        <li class="action-desc">For coal consumption, the AIs always behave as if they are connected to the coal market (they must be actually connected to move coal into the market).</li>
                         <li class="action-desc">
                         The AIs do not require beer to sell, but they will consume it if they can. If they cannot sell they attempt a free network action. They also earn extra VP under certain circumstances (the app will tell you).
                         </li>
