Update main site links

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <p><a href="/kanbanev">Kanban EV Solo Helper</a></p>
     <p><a href="/nemoswar">Nemo's War: Online Dice Roller</a></p>
     <p><a href="/nemoswarcalc">Nemo's War: Score Calculator</a></p>
+    <p><a href="/eliza">Brass: Birmingham Online Solo Opponents (beta)</a></p>
     <h2>Solo Modes</h2>
     <p><a href="https://boardgamegeek.com/filepage/211160/pathfinder-unofficial-mars-solo-mode-w-curiosity-s">Pathfinder - An Unofficial On Mars Solo Mode (w/ Curiosity Solo Campaign)</a></p>
     <p><a href="https://boardgamegeek.com/filepage/209734/eliza-brass-birmingham-solo-mode-w-mechanis-solo-c">Eliza - A Brass: Birmingham Solo Mode (w/ Mechanis Solo Campaign)</a></p>
