--- a/eliza/index.html
+++ b/eliza/index.html
@@ -86,6 +86,7 @@
                         </li>
                         <li class="action-desc">You play by normal rules, except <em>you cannot overbuild (the AIs can't either)</em>.</li>
                         <li class="action-desc">Removing industry tiles to pay for negative income is not currently supported.</li>
+                        <li class="action-desc">Strategy note: If the AIs have not sold any tiles in an era, then during the last 3 rounds of the era (8,9,10 for a 2-player game or 7,8,9 for a 3-player game) the AI is <em>guaranteed</em> to sell in one of those rounds if it can.</li>
                     </ul>
                       
                 </li>
