--- a/eliza/index.html
+++ b/eliza/index.html
@@ -53,12 +53,14 @@
                 Eliza Deck Type:
                 <select v-model="eliza.deckType">
                     <option value="0">Balanced</option>
+                    <option value="1">Market-Driven (Beta)</option>
                 </select>
             </div>
             <div class="text-centered" v-if="numberOfPlayers === '3'">
                 Eleanor Deck Type:
                 <select v-model="eleanor.deckType">
                     <option value="0">Balanced</option>
+                    <option value="1">Market-Driven (Beta)</option>
                 </select>
             </div>
             <br />
