--- a/mc/index.html
+++ b/mc/index.html
@@ -25,10 +25,10 @@
                     {{ character.hitpoints }}
                 </section>
                 <section class="hit-point-buttons">
-                    <a class="hit-point-buttons--big" href="#" v-on:click="character.updateHitPoints(-5)">- 5</a>
-                    <a href="#" v-on:click="character.updateHitPoints(-1)">- 1</a>
-                    <a href="#" v-on:click="character.updateHitPoints(1)">+ 1</a>
-                    <a class="hit-point-buttons--big" href="#" v-on:click="character.updateHitPoints(5)">+ 5</a>
+                    <a class="hit-point-buttons--big" href="#" v-on:click="character.updateHitPoints(-5, $event)">- 5</a>
+                    <a href="#" v-on:click="character.updateHitPoints(-1, $event)">- 1</a>
+                    <a href="#" v-on:click="character.updateHitPoints(1, $event)">+ 1</a>
+                    <a class="hit-point-buttons--big" href="#" v-on:click="character.updateHitPoints(5, $event)">+ 5</a>
                 </section>
             </section>
         </section>
